Get, Post, Put and Delete work and are documented on /api-docs
